sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: not found: value a
      if (plusPetit(v,j-1)) { copie(j-1,j);a+=1 }
                                           ^AlgInsertionSort:9: error: not found: value v
     copie(v,a)
           ^AlgInsertionSort:9: error: not found: value a
     copie(v,a)
             ^